--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+autopep8==1.5.4
 bluepy==1.3.0
 certifi==2018.8.24
 chardet==3.0.4
@@ -7,6 +8,8 @@ entrypoints==0.3
 idna==2.6
 keyring==17.1.1
 keyrings.alt==3.1.1
+pycairo==1.20.0
+pycodestyle==2.6.0
 pycrypto==2.6.1
 PyGObject==3.30.4
 python-apt==1.8.4.1
@@ -15,4 +18,5 @@ requests==2.21.0
 SecretStorage==2.3.1
 six==1.12.0
 ssh-import-id==5.7
+toml==0.10.2
 urllib3==1.24.1
