--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+ahocorapy==1.6.1
 asn1crypto==0.24.0
+beacontools==2.1.0
 bluepy==1.3.0
 certifi==2018.8.24
 chardet==3.0.4
+construct==2.10.67
 cryptography==2.6.1
 entrypoints==0.3
+future==0.18.2
 idna==2.6
 keyring==17.1.1
 keyrings.alt==3.1.1
